fix userpic spacing/reduce image size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,9 +266,10 @@ nav{
 }
 
 .userpic {
-	height: 3rem;
-	vertical-align: middle;
-	margin-right: 10px;
+    vertical-align: middle;
+    margin: 10px;
+    width: 40px;
+    height: 40px;
 }
 
 .toast {
